--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Lytics Demo App</string>
-    <string name="title_activity_demo">DemoActivity</string>
+    <string name="app_name">Lytics SDK Showcase</string>
+    <string name="title_activity_demo">Lytics SDK Showcase</string>
     <string name="title_profile">Profile</string>
     <string name="title_events">Events</string>
     <string name="title_event_detail">Event Detail</string>
